Hitlist - Footer - Part 3 - Issue fixed ----10px gap - removed padding from .main class

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,14 +56,13 @@ p {
 }
 
 li {
+  display: flex;
+  flex-direction: column;
   font-family: Avenir, sans-serif;
   font-size: 14px;
   list-style-type: none;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  padding-left: 10%;
-  padding-right: 10%;
 }
 
 .breadcrumb {
@@ -82,7 +81,6 @@ li {
 
 main {
   min-height: 100vh;
-  padding: 1rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -114,11 +112,9 @@ p {
 }
 .strip h2 {
   padding-top: 50px;
+  padding-bottom: 20px;
 }
 .innertext p {
-  padding-top: 5%;
-  padding-left: 10%;
-  padding-right: 10%;
   min-width: 320px;
   justify-content: center;
   text-align: center;
@@ -133,9 +129,6 @@ p {
   display: grid;
   flex-direction: row;
 }
-.serve {
-  height: 500px;
-}
 
 /* ===========================================Footer Component */
 
@@ -147,12 +140,14 @@ footer img {
 }
 .footerStyle {
   display: flex;
-  justify-content: space-around;
-  align-content: flex-end;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
   align-items: center;
   background-color: rgba(45, 45, 48, 0.9);
   color: #e6dff5;
+  min-width: 320px;
   /* padding-top: 50px; */
 }
 tel {
